2013-02-03  Karl Berry  <karl@gnu.org>

	* po_document/pl.po: new translation.
	* po_document/LINGUAS: add it.

2013-02-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (@normalturnoffactive): also reset -, so
	@code{@xref{-}} works.
	(\normaldash): rename from \realdash, for consistency.
	Change all uses.

2013-01-29  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Customization Files) <TOC_FILE>: is no more.

2013-01-29  Patrice Dumas  <pertusus@free.fr>

	* po/POTFILES.in, tp/init/latex2html.pm: mark translations
	for error messages in latex2html.pm, and add file to 
	po/POTFILES.in.

2013-01-28  Karl Berry  <karl@gnu.org>

	* pretest 4.13.95.

	* README-hacking: .po files might not be literal copies.
	texinfo_document is new TP domain.

	* build-aux/config.sub: srclist-update.

	* tp/Makefile.am (dist_converters_DATA): add
	Texinfo/Convert/IXIN.pm Texinfo/Convert/IXINSXML.pm.

2013-01-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Customization Variables): split node
	out from Other Cust Var.
	(Other Customization Variables): new TEXINFO_OUTPUT_FORMAT
	replaces the individual special-output-format variables.
	* doc/refcard/txivarcheck: only check uppercase
	variable names, and do output manual-only names.

	* man/pod2texi.1: new file, made with pod2man.
	* man/Makefile.am (man_MANS): add it.

2013-01-27  Patrice Dumas  <pertusus@free.fr>

	* tp/texi2any.pl, tp/Texinfo/Common.pm, tp/DebugTexinfo/DebugTree.pm,
	util/detexinfo: remove output specific customization variables.

2013-01-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables)
	<TEXINFO_COLUMN_FOR_DESCRIPTION>: new.
	<TREE_TRANSFORMATIONS>: add indent_menu_descriptions.
	Also, use it to re-indent the menus and regenerate_master_menu.

2013-01-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Raw Formatter Commands): be more emphatic
	about some processing being done inside raw regions,
	and the resulting unpredictable effects when Texinfo-level