@@ -1,5 +1,5 @@
 #! /usr/bin/env perl
-# $Id: regenerate_file_lists.pl,v 1.12 2012-11-21 22:48:48 pertusus Exp $
+# $Id: regenerate_file_lists.pl,v 1.13 2013-02-03 23:53:48 karl Exp $
 # Copyright 2011, 2012 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
@@ -54,7 +54,7 @@ open (INCLUDE, '>Makefile.tres') or die "open(>Makefile.tres) failed: $!";
 print INCLUDE <<EOH;
 # Makefile.tres generated by $0.
 #
-# Copyright 2012 Free Software Foundation, Inc.
+# Copyright 2013 Free Software Foundation, Inc.
 #
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without
