@@ -1,5 +1,10 @@
 2013-02-03  Karl Berry  <karl@gnu.org>
 
+	* tp/Makefile.am: doc fix.
+	* tp/maintain/regenerate_docstr.sh: do not depend on directories
+	with their unpredictable timestamps.
+	* tp/maintain/regenerate_file_lists.pl: copyright year update.
+
 	* po_document/pl.po: new translation.
 	* po_document/LINGUAS: add it.
 
